--- a/JenkinsFile
+++ b/JenkinsFile
@@ -2,6 +2,7 @@ pipeline {
     agent any
 
     stages {
+
         stage('Pull Code') {
             steps {
                 git branch: 'main', url: 'https://github.com/ranjana3005/blue-green-deployment.git'
@@ -10,17 +11,21 @@ pipeline {
 
         stage('Deploy Blue') {
             steps {
-                bat 'docker stop blue || echo Blue not running'
-                bat 'docker rm blue || echo Blue not found'
-                bat 'docker run -d --name blue -p 8081:3000 ranjana4047/node-blue:v1'
+                bat '''
+                docker stop blue 2>NUL || echo Blue not running
+                docker rm blue 2>NUL || echo Blue not found
+                docker run -d --name blue -p 8081:3000 ranjana4047/node-blue:v1
+                '''
             }
         }
 
         stage('Deploy Green') {
             steps {
-                bat 'docker stop green || echo Green not running'
-                bat 'docker rm green || echo Green not found'
-                bat 'docker run -d --name green -p 8082:3000 ranjana4047/node-green:v2'
+                bat '''
+                docker stop green 2>NUL || echo Green not running
+                docker rm green 2>NUL || echo Green not found
+                docker run -d --name green -p 8082:3000 ranjana4047/node-green:v2
+                '''
             }
         }
 
@@ -34,6 +39,8 @@ pipeline {
 
                     if (!green_status.contains('Green')) {
                         error("❌ Green deployment failed")
+                    } else {
+                        echo "✅ Green deployment is healthy"
                     }
                 }
             }
@@ -42,7 +49,7 @@ pipeline {
         stage('Switch Traffic') {
             steps {
                 bat 'docker stop blue'
-                echo '✅ Traffic switched to GREEN deployment'
+                echo '✅ Traffic switched to GREEN deployment (Blue stopped)'
             }
         }
     }
